Create rooms.
